samples/_failures_safe/1761276657_52a516_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb20fa9e.c: In function ‘main’:
./samples/SAFE/__tmp_eb20fa9e.c:143:9: error: expected expression at end of input
  143 |         cleanup_context(&
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eb20fa9e.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb20fa9e.c:143:9: error: expected declaration or statement at end of input
